// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a contained disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-49 Button-root-60 MuiButton-contained Button-contained-52 MuiButton-containedPrimary Button-containedPrimary-53 Mui-disabled Button-disabled-59 Mui-disabled"
    data-id="button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`it renders a contained primary by default 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-1 Button-root-12 MuiButton-contained Button-contained-4 MuiButton-containedPrimary Button-containedPrimary-5"
    data-id="primary-button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders a contained secondary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-25 Button-root-36 MuiButton-contained Button-contained-28 MuiButton-containedSecondary Button-containedSecondary-30"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders a primary inverse button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-inverse-root-278 Button-inverse-root-287 MuiButton-contained Button-inverse-contained-281 MuiButton-containedPrimary Button-inverse-containedPrimary-282"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Inverse
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an icon 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-241 Button-root-252 MuiButton-contained Button-contained-244 MuiButton-containedPrimary Button-containedPrimary-245"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-265"
          data-id="IconPhone"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
          />
        </svg>
      </span>
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an outlined disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-121 Button-root-132 MuiButton-outlined Button-outlined-127 MuiButton-outlinedPrimary Button-outlinedPrimary-128 Mui-disabled Button-disabled-131 Mui-disabled"
    data-id="button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`it renders an outlined primary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-73 Button-root-84 MuiButton-outlined Button-outlined-79 MuiButton-outlinedPrimary Button-outlinedPrimary-80"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an outlined secondary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-97 Button-root-108 MuiButton-outlined Button-outlined-103 MuiButton-outlinedSecondary Button-outlinedSecondary-105"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an text disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-193 Button-root-204 MuiButton-text MuiButton-textPrimary Mui-disabled Button-disabled-203 Mui-disabled"
    data-id="button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`it renders an text primary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-145 Button-root-156 MuiButton-text MuiButton-textPrimary"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an text secondary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-169 Button-root-180 MuiButton-text MuiButton-textSecondary Button-textSecondary-178"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`when spinner is on it does not render a spinner when disabled is true 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-392 Button-root-403 MuiButton-outlined Button-outlined-398 MuiButton-outlinedPrimary Button-outlinedPrimary-399 Mui-disabled Button-disabled-402 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`when spinner is on it renders a 20px spinner for 'small' size 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-340 Button-root-351 MuiButton-contained Button-contained-343 MuiButton-containedPrimary Button-containedPrimary-344 MuiButton-containedSizeSmall MuiButton-sizeSmall Button-sizeSmall-341 Mui-disabled Button-disabled-350 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="-span c0"
        style="opacity: 0;"
      >
        Small
      </span>
      <div
        class="MuiCircularProgress-root spinner-root-364 spinner-root-365 button-spinner-362 button-spinner-363 MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
        data-id="button-spinner"
        role="progressbar"
        style="width: 20px; height: 20px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`when spinner is on it renders a 24px spinner for 'medium' size 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-314 Button-root-325 MuiButton-contained Button-contained-317 MuiButton-containedPrimary Button-containedPrimary-318 Mui-disabled Button-disabled-324 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="-span c0"
        style="opacity: 0;"
      >
        Primary
      </span>
      <div
        class="MuiCircularProgress-root spinner-root-338 spinner-root-339 button-spinner-336 button-spinner-337 MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
        data-id="button-spinner"
        role="progressbar"
        style="width: 24px; height: 24px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`when spinner is on it renders a spinner for 'outlined' variant 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-366 Button-root-377 MuiButton-outlined Button-outlined-372 MuiButton-outlinedPrimary Button-outlinedPrimary-373 Mui-disabled Button-disabled-376 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="-span c0"
        style="opacity: 0;"
      >
        Small
      </span>
      <div
        class="MuiCircularProgress-root spinner-root-390 spinner-root-391 button-spinner-388 button-spinner-389 MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
        data-id="button-spinner"
        role="progressbar"
        style="width: 24px; height: 24px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;
